# libdestruct

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
libdestruct/: __init__.py  libdestruct.py
libdestruct/backing/: fake_resolver.py  memory_resolver.py  resolver.py
libdestruct/c/: __init__.py  base_type_inflater.py  c_int.py  c_integer_types.py  c_long.py  c_str.py  c_uint.py  c_ulong.py  ctypes_generic.py  ctypes_generic_field.py  struct_parser.py
libdestruct/common/: __init__.py  array.py  attribute.py  field.py  inflater.py  obj.py  ptr.py  type_inflater.py  type_registry.py  utils.py
libdestruct/common/array/: __init__.py  arr_impl.py  array.py  array_field.py  array_field_inflater.py  array_impl.py  array_of.py  linear_array_field.py
libdestruct/common/attributes/: __init__.py  offset.py  offset_attribute.py
libdestruct/common/enum/: __init__.py  enum.py  enum_field.py  enum_field_inflater.py  enum_of.py  int_enum_field.py
libdestruct/common/ptr/: ptr.py  ptr_factory.py  ptr_field.py  ptr_field_inflater.py  ptr_struct_field.py
libdestruct/common/struct/: __init__.py  field_inflater.py  ptr_factory.py  ptr_struct_field.py  struct.py  struct_field.py  struct_field_inflater.py  struct_impl.py  struct_inflater.py
test/: run_suite.py  test.py
test/binaries/: array_test  basic_struct_test  basic_test  ctypes_test  string_test
test/scripts/: array_test.py  basic_struct_test.py  basic_test.py  ctypes_test.py  enum_test.py  string_test.py
test/srcs/: array_test.c  basic_struct_test.c  basic_test.c  ctypes_test.c  string_test.c
